--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,21 +1,31 @@
 html {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	border: 0;
 	font-family: Helvetica, Arial, sans-serif;
 	color: #404040;
+	background: #FFF;
+	overflow-y: scroll;
 }
 
 body {
 	width: 960px;
+	height: 100%;
 	margin: 0 auto;
+	background: #FFF;
 }
 
 header {
 	width: 960px;
-	height: 75px;
+	height: 105px;
 	margin: 0 auto;
 	position: fixed;
-	top: 30px;
+	top: 0;
+	background: #FFF;
 	background-image: url('../images/header_shelf.png');
 	background-repeat: no-repeat;
+	background-position: bottom;
 	text-align: center;
 	z-index: 2;
 }
@@ -24,7 +34,6 @@ header a {
 }
 header a img {
 	width: 260px;
-	margin-top: -35px;
 }
 
 .topnav {
@@ -59,16 +68,27 @@ header a img {
 	text-shadow: 1px 1px 1px #404040;
 }
 
+.main_content {
+	width: 900px;
+	min-height: 100%;
+	margin: 130px auto 45px auto;
+	padding: 10px;
+	box-shadow: 0px 0px 10px #404040;
+	border: 1px solid #FFF;
+	background: #FFF;
+}
+
 footer {
-	width: 960px;
+	width: 954px;
 	height: 40px;
 	border: 3px solid #404040;
 	border-bottom: none;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	text-align: center;
+	background: #FFF;
 }
 
 footer span {
