--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,19 +78,33 @@ header a img {
 	border: 1px solid #FFF;
 	background: #FFF;
 }
-.main-content section {
-	width: 400px;
-	float: left;
-}
+
 aside {
 	height: 400px;
 	width: 300px;
 	border: 2px solid #404040;
 	overflow: visible;
 	float: right;
-	margin-right: -40px;
+	margin-top: 15px;
+	margin-right: -36px;
 	padding: 10px;
 	background: #FFF;
+}
+
+ul {
+	width: 300px;
+	clear: left;
+	list-style-type: none;
+}
+
+.form {
+	float: left;
+}
+.form li{
+	margin: 5px 0;
+}
+.form li input {
+	float: right;
 }
 
 footer {
