--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,7 +82,7 @@ header a img {
 aside {
 	height: 400px;
 	width: 300px;
-	border: 2px solid #404040;
+	border: 2px solid #333F50;
 	overflow: visible;
 	float: right;
 	margin-top: 15px;
