--- a/assets/css/catalog.css
+++ b/assets/css/catalog.css
@@ -1,7 +1,3 @@
-.main_content {
-	padding-top: 20px;
-}
-
 article {
 	border-bottom: 2px solid black;
 	border-left: 1px solid black;
@@ -18,7 +14,7 @@ img, h3{
 	vertical-align: middle;
 }
 
-img {
+article img {
 	width: 100px;
 }
 
@@ -26,6 +22,3 @@ h3 {
 	
 }
 
-.aside {
-	width 200px;
-}
