--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,6 +128,7 @@ ul {
 .gallery ul {
 	width: 20000em;
 	margin: 0;
+	margin-left: -150px;
 	padding: 0;
 	position: relative;
 	list-style: none;
@@ -198,6 +199,9 @@ footer span {
 	background-color: white;
 	padding: 15px;
 	min-width : 800px;
+	position: absolute;
+	margin: auto;
+	visibility: hidden;
 }
 
 #dialog img{
