--- a/assets/css/catalog.css
+++ b/assets/css/catalog.css
@@ -1,7 +1,7 @@
 article {
 	border-bottom: 2px solid black;
 	border-left: 1px solid black;
-	margin-bottom: 10px;
+	margin: 20px 0;
 	height: 75px;
 	width: 500px;
 	overflow: hidden;
