--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -107,13 +107,13 @@ ul {
 	padding: 0;
 }
 
-.form {
+#target {
 	float: left;
 }
-.form li{
+#target li{
 	margin: 5px 0;
 }
-.form li input {
+#target input {
 	float: right;
 }
 
@@ -199,10 +199,11 @@ footer span {
 
 
 #dialog{
-	border: 1px black solid;
+	border: 2px solid #404040;
 	background-color: white;
 	padding: 15px;
-	min-width : 800px;
+	min-width : 700px;
+	box-shadow: 7px 7px 5px #333F50;
 }
 
 #dialog img{
@@ -217,4 +218,29 @@ footer span {
 }
 #dialog .para{
 	float : right;
+}
+.ui-dialog {
+	z-index: 5;
+}
+.ui-dialog-titlebar {
+	padding: 5px;
+	font-weight: bold;
+	border: 2px solid #404040;
+	border-bottom: none;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	background: white;
+}
+.ui-dialog-titlebar-close {
+	float: right;
+}
+.ui-widget-overlay {
+	position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+    background: #000;
+    opacity: 0.6;
+    z-index: 3;
 }
