borders on the thingies

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,6 +110,13 @@ ul {
 #target {
 	float: left;
 }
+
+form {
+	border : 2px solid #404040;
+	padding : 10px;
+	border-radius : 15px;
+	margin-bottom : 10px;
+}
 #target li{
 	margin: 5px 0;
 }
