--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,7 +155,7 @@ form {
 	width: 500px;
 	float: left;
 	text-align: center;
-	margin: 0 auto 10px auto;
+	margin: 0 auto;
 }
 .us h2 {
 	border: 2px solid #404040;
@@ -253,23 +253,9 @@ footer span {
     z-index: 3;
 }
 
-
 .ui-accordion .ui-accordion-header {
-	display: block;
 	cursor: pointer;
-	position: relative;
-	margin-top: 2px;
-	padding: .5em .5em .5em .7em;
-	min-height: 0; /* support: IE7 */
 }
-.ui-accordion .ui-accordion-header .ui-accordion-header-icon {
-	position: absolute;
-	left: .5em;
-	top: 50%;
-	margin-top: -8px;
-}
-.ui-accordion .ui-accordion-content {
-	padding: 1em 2.2em;
-	border-top: 0;
-	overflow: auto;
+.ui-accordion-content {
+	height: 150px;
 }
