--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,16 +109,13 @@ ul {
 
 #target {
 	float: left;
-}
-
-form {
 	border : 2px solid #404040;
 	padding : 10px;
 	border-radius : 15px;
 	margin-bottom : 10px;
 }
 #target li{
-	margin: 5px 0;
+	padding: 5px 0;
 }
 #target input {
 	float: right;
